--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "workbox-webpack-plugin": "3.6.3",
+    "history": "latest"
   },
   "scripts": {
     "start": "react-app-rewired start",
